--- a/barbershop/src/main/resources/properties/database.properties
+++ b/barbershop/src/main/resources/properties/database.properties
@@ -1,9 +1,9 @@
 name=jdbc/barbershop_db
-db.driver=com.mysql.cj.jdbc.Driver
+driver=com.mysql.cj.jdbc.Driver
 user=root
 password=31478965
 poolsize=32
-db.url=jdbc:mysql://localhost:3306/barbershop_db
+url=jdbc:mysql://localhost:3306/barbershop_db
 useUnicode=true
 encoding=UTF-8
 useSSL=true
